# openjpeg-sharp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  appveyor.yml
src/lib/openjp2/: j2k.c  t2.c
wrapping/: CMakeLists.txt
wrapping/csharp/: CMakeLists.txt
wrapping/csharp/openjp2/: CMakeLists.txt  CSharpOpenJPEG.c
